[package]
name = "modpacks-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
ureq = "2.4.0"
sha1 = "0.10.0"
hex = "0.4.3"
threadpool = "1.8.1"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }